--- a/AndroidApp/AndroidManifest.xml
+++ b/AndroidApp/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:name="DAV_Routenbewerter">
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.dav.routenbewerter.MainActivity"
+            android:name="dav.routenbewerter.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="dav.routenbewerter.MenuActivity" android:label="@string/menu_title"></activity>
+        <activity android:name="dav.routenbewerter.RegisterActivity" android:label="@string/register_title"></activity>
+        <activity android:name="dav.routenbewerter.PersonalDetailsActivity" android:label="@string/personal_title"></activity>
+        <activity android:name="dav.routenbewerter.RateRouteActivity" android:label="@string/rateroute_title"></activity>
+        <activity android:name="dav.routenbewerter.RoutesListActivity" android:label="@string/routelist_title"></activity>
+        <activity android:name="dav.routenbewerter.RouteDetailsActivity" android:label="@string/routedetails_title"></activity>
     </application>
 
 </manifest>
