Register und Login fertiggestellt
Der Login und das Registrieren von neuen Benutzern ist nun
funktionstüchtig.
Zusätzlich wurden Progressdialoge hinzugefügt für den JSONParser und die
Syncronisation der lokalen DB.
Toast Dialoge hinzugefügt für sämtliche Fehlermeldungen.
Zur AndroidWebAPI "uid" zur benutzer rückgabe hinzugefügt.
Übergabe dieser uid an weitere Screens eingebaut damit jeder Screen
später weiß wer eingeloggt ist.

--- a/AndroidApp/AndroidManifest.xml
+++ b/AndroidApp/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="dav.routenbewerter.MenuActivity" android:label="@string/menu_title"></activity>
+        <activity android:name="dav.routenbewerter.MenuActivity" android:label="@string/menu_title" android:configChanges="keyboardHidden|orientation"></activity>
         <activity android:name="dav.routenbewerter.RegisterActivity" android:label="@string/register_title"></activity>
         <activity android:name="dav.routenbewerter.PersonalDetailsActivity" android:label="@string/personal_title"></activity>
         <activity android:name="dav.routenbewerter.RateRouteActivity" android:label="@string/rateroute_title"></activity>
