--- a/AndroidApp/AndroidManifest.xml
+++ b/AndroidApp/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="dav.routenbewerter.MainActivity"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name="dav.routenbewerter.MenuActivity" android:label="@string/menu_title" android:configChanges="keyboardHidden|orientation"></activity>
-        <activity android:name="dav.routenbewerter.RegisterActivity" android:label="@string/register_title"></activity>
+        <activity android:name="dav.routenbewerter.RegisterActivity" android:label="@string/register_title" android:windowSoftInputMode="stateHidden"></activity>
         <activity android:name="dav.routenbewerter.PersonalDetailsActivity" android:label="@string/personal_title"></activity>
         <activity android:name="dav.routenbewerter.RateRouteActivity" android:label="@string/rateroute_title"></activity>
         <activity android:name="dav.routenbewerter.RoutesListActivity" android:label="@string/routelist_title"></activity>
